crates/hir-ty/tests/snapshots/jls_generics__enum_set_bound.snap
---
source: crates/hir-ty/tests/jls_generics.rs
expression: out
---
FILE /src/com/example/Bounds.java:
package com.example;

import java.util.EnumMap;
import java.util.EnumSet;

enum SearchType { CLASS, MEMBER }

class Body {
    void m() {
        EnumSet<SearchType> types = null;
        EnumMap<SearchType, Long> counts = null;
    }
}
