crates/hir-ty/tests/snapshots/jls_generics__type_argument_bound_decl.snap
---
source: crates/hir-ty/tests/jls_generics.rs
expression: out
---
FILE /src/com/example/Bounds.java:
package com.example;

class Box<T extends Number> {
    M<String> a;
    void m(M<String> p) {
    }
    M<Integer> n() {
        return null;
    }
}
class M<T extends Number> {
}
